// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar renders correctly 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  />
  <div
    class="za-nav-bar__title"
  />
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  />
</div>
`;

exports[`NavBar renders correctly with left content 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  >
    <i
      class="za-icon za-icon--arrow-left"
    />
  </div>
  <div
    class="za-nav-bar__title"
  >
    测试标题
  </div>
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  />
</div>
`;

exports[`NavBar renders correctly with multiple icons 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  >
    <div>
      <i
        class="za-icon za-icon--arrow-left"
      />
    </div>
  </div>
  <div
    class="za-nav-bar__title"
  >
    测试标题
  </div>
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  >
    <div>
      <i
        class="za-icon za-icon--arrow-right"
      />
      <i
        class="za-icon za-icon--info-round"
      />
    </div>
  </div>
</div>
`;

exports[`NavBar renders correctly with right content 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  >
    <i
      class="za-icon za-icon--arrow-left"
    />
  </div>
  <div
    class="za-nav-bar__title"
  >
    测试标题
  </div>
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  >
    <i
      class="za-icon za-icon--arrow-right"
    />
  </div>
</div>
`;

exports[`NavBar renders correctly with title 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  />
  <div
    class="za-nav-bar__title"
  >
    测试标题
  </div>
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  />
</div>
`;
